Removed strings identifying icons, using icons.name instead - Fixed scrollbar issue (index.html) - Added static icons, which do not get updated

--- a/src/ide/css-dark/ide.css
+++ b/src/ide/css-dark/ide.css
@@ -14,8 +14,8 @@
 .dark-theme .ide-toolbar {
 	background: #303030;
 	color: #fff;
-	border-bottom: #555;
-	box-shadow: inset 0px -1px 0px #444;
+	border-bottom: #222 solid 1px;
+	box-shadow: inset 0px -1px 0px #292929;
 }
 
 .dark-theme .ide-sourcecode {
